--- a/geoquery/templates/geoquery/index.html
+++ b/geoquery/templates/geoquery/index.html
@@ -7,7 +7,9 @@
 <div class="row">
     <div class="col text-center">
         <p>Welcome to Lab 12</p>
-        <h3><a href="">Play with Geopy.</h3></a>
+        <h3><a href="{% url 'lookup' %}">Lookup an address in Geopy.</h3></a>
+        <h3><a href="{% url 'distance' %}">Lookup distance between an address and Highlands University.</h3></a>
+
     </div>
 </div>
 {% endblock content %}
